fixed footer, fixed book now button alignment

--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ html, body { height: 100%; }
 
 .spacer {
     width: 100%;
-    height: 108px;
+    height: 104px;
 }
 .carousel-inner img {
     width: 100%;
@@ -97,8 +97,8 @@ html, body { height: 100%; }
     font-family:'Roboto', sans-serif;
     font-size: 1.5rem;
     color: #fff;
-    padding: 25px 25px 0px 25px;
-    z-index: 9999;
+    padding: 25px 25px 10px 25px;
+        z-index: 9999;
 }
 
 .navbar-default .navbar-nav>li>a:hover{
@@ -130,7 +130,6 @@ html, body { height: 100%; }
     color: #fff;
     width: 100px;
     text-align: center;
-    margin-top: 10px;
     font-size:17px;
 }
 
@@ -610,7 +609,6 @@ html, body { height: 100%; }
         color: #fff;
         width: 87px;
         text-align: center;
-        margin-top: 10px;
         font-size: 11px;
     }
 
@@ -668,6 +666,9 @@ html, body { height: 100%; }
 
 /* Extra Small Devices, Phones */
 @media only screen and (min-width : 480px){
+    .fa-facebook-square {
+        font-size: 1.5em;
+    }    
     .navbar {
         position: fixed;
         min-height: 50px;
@@ -696,7 +697,6 @@ html, body { height: 100%; }
         color: #fff;
         width: 87px;
         text-align: center;
-        margin-top: 10px;
         font-size: 11px;
     }
     .navbar-nav{
@@ -771,6 +771,9 @@ html, body { height: 100%; }
 
 /* Small Devices, Tablets */
 @media only screen and (min-width : 768px){
+    .fa-facebook-square {
+        font-size: 1.5em;
+    }    
     .navbar-brand img {
         position: relative;
         top: 5px;
@@ -787,6 +790,9 @@ html, body { height: 100%; }
 
 /* Medium Devices, Desktops */
 @media only screen and (min-width : 992px){
+    .fa-facebook-square {
+        font-size: 1.5em;
+    }   
     .navbar-brand img {
         position: relative;
         top: 5px;
@@ -810,6 +816,10 @@ html, body { height: 100%; }
 
 /* Large Devices, Wide Screens */
 @media only screen and (min-width : 1200px) {
+    .fa-facebook-square {
+        font-size: 1.5em;
+        margin-top: 3px;
+    }    
     .navbar {
         position: relative;
         min-height: 50px;
@@ -846,7 +856,6 @@ html, body { height: 100%; }
         color: #fff;
         width: 100px;
         text-align: center;
-        margin-top: 10px;
         font-size: 17px;
     }
 
@@ -946,6 +955,10 @@ html, body { height: 100%; }
 
 /* Large Devices, Wide Screens */
 @media only screen and (max-width : 1200px){
+    .fa-facebook-square {
+        font-size: 1.5em;
+        margin-top: 3px;
+    } 
     .navbar {
         position: relative;
         min-height: 50px;
@@ -979,7 +992,6 @@ html, body { height: 100%; }
         color: #fff;
         width: 100px;
         text-align: center;
-        margin-top: 10px;
         font-size:17px;
     }
 
@@ -1056,6 +1068,9 @@ html, body { height: 100%; }
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px){
+    .fa-facebook-square {
+        font-size: 1.5em;
+    }   
     .navbar-brand img {
         position: relative;
         top: 5px;
@@ -1078,6 +1093,9 @@ html, body { height: 100%; }
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px){
+    .fa-facebook-square {
+        font-size: 1.5em;
+    }     
        .navbar-brand img {
         position: relative;
         top: 5px;
@@ -1099,6 +1117,9 @@ html, body { height: 100%; }
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px){
+    .fa-facebook-square {
+        font-size: 1.5em;
+    }    
     .navbar {
         position: fixed;
         min-height: 50px;
@@ -1126,7 +1147,6 @@ html, body { height: 100%; }
         color: #fff;
         width: 87px;
         text-align: center;
-        margin-top: 10px;
         font-size: 11px;
     }
     .navbar-nav{
@@ -1219,7 +1239,6 @@ html, body { height: 100%; }
         color: #fff;
         width: 87px;
         text-align: center;
-        margin-top: 10px;
         font-size: 11px;
     }
     .small-white-item, .small-white-item:hover, .small-white-item:focus, .small-white-item:active{
